# aphie

./: LICENSE  pyproject.toml
src/aphie/: __init__.py  main.py
tests/: test_parse.py
